--- a/style.css
+++ b/style.css
@@ -9,11 +9,106 @@
   grid-template-columns: 1fr 3fr;
   height: 100vh;
 }
+.logo {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  margin: 10px 0px 40px 0px;
+}
+.logo P {
+  font-weight: 700;
+  font-size: 46px;
+  margin-left: 10px;
+  color: #1f3e59;
+}
+
 .form-container {
   background-color: #e9c1af;
   height: 100%;
+  padding: 40px;
 }
 .book-details-container {
-  background-color: #faf7f5;
+  background-color: #f7f1f0;
   height: 100%;
+}
+.new-book-form {
+  display: grid;
+  grid-template-rows: repeat(5, 1fr);
+  gap: 30px;
+}
+form #title,
+#author,
+#pages,
+#status {
+  height: 50px;
+  background-color: #e9c1af;
+  border-bottom: 2px dashed #1f3e59;
+  outline: none;
+  color: #1f3e59;
+}
+#status {
+  border: 1px solid #1f3e59;
+  outline: none;
+  padding: 5px;
+  margin-top: 10px;
+}
+::placeholder {
+  color: #1f3e59;
+}
+form button {
+  background-color: #1f3e59;
+  border-radius: 5px;
+  color: #f7f1f0;
+}
+.detail-one {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+  margin: 60px 20px 20px 20px;
+}
+
+.detail-one button {
+  background-color: #d05050;
+  height: 55px;
+  width: 150px;
+  margin-top: -15px;
+  border-radius: 2px;
+}
+.detail-two-elements {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 20px;
+  width: 75%;
+  height: 75px;
+  margin: 0 auto; /* Center horizontally on the page */
+  background-color: #1f3e59;
+  color: #f7f1f0;
+}
+#book-title,
+#book-author,
+#book-pages,
+#book-status,
+#removal {
+  width: 150px;
+}
+
+.detail-three-elements {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 75%;
+  height: 75px;
+  margin: 0 auto; /* Center horizontally on the page */
+  gap: 20px;
+}
+
+#book-title-data,
+#book-author-data,
+#book-pages-data,
+#book-status-data,
+#removal-data {
+  width: 150px;
 }
