Debug some few issues with update the book data on the dom

--- a/style.css
+++ b/style.css
@@ -110,30 +110,30 @@ form button {
 #removal-data {
   width: 150px;
 }
+
 .book-title-data-script {
   margin: 20px 20px 20px 0px;
 }
-
 .book-status-data-script {
-  padding: 5px 10px;
-  background-color: #1f3e59;
-  color: #fff;
-  cursor: pointer;
-  border-radius: 4px;
-  display: inline-block;
-  margin: 5px;
-}
-
-#delete-button-id {
-  padding: 5px 10px;
+  width: 80px;
   background-color: #d05050;
   color: #fff;
   cursor: pointer;
   border-radius: 4px;
-  display: inline-block;
-  margin: 5px;
+  text-align: center;
+  margin: 20px 20px 20px 0px;
+}
+
+#delete-button-id {
+  width: 75px;
+  background-color: #d05050;
+  color: #fff;
+  cursor: pointer;
+  border-radius: 4px;
+  text-align: center;
+  margin: 20px 20px 20px 0px;
 }
 
 #delete-button-id:hover {
-  background-color: #cc4949;
+  background-color: #d05050;
 }
