--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   display: flex;
   text-align: center;
   justify-content: center;
-  margin: 10px 0px 40px 0px;
+  margin: 0.8rem 0 2.5rem 0;
 }
 .logo P {
   font-weight: 700;
