--- a/style.css
+++ b/style.css
@@ -6,9 +6,19 @@
 }
 .main-container {
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: auto auto;
   height: 100vh;
 }
+
+.form-container {
+  background-color: #e9c1af;
+  padding: 2.5rem;
+}
+
+.book-details-container {
+  background-color: #f7f1f0;
+}
+
 .logo {
   display: flex;
   text-align: center;
@@ -22,44 +32,28 @@
   color: #1f3e59;
 }
 
-.form-container {
-  background-color: #e9c1af;
-  height: 100%;
-  padding: 40px;
-}
-.book-details-container {
-  background-color: #f7f1f0;
-  height: 100%;
-}
 .new-book-form {
-  display: grid;
-  grid-template-rows: repeat(5, 1fr);
-  gap: 30px;
+  display: flex;
+  flex-direction: column;
 }
-form #title,
-#author,
-#pages,
-#status {
-  height: 50px;
-  background-color: #e9c1af;
-  border-bottom: 2px dashed #1f3e59;
-  outline: none;
-  color: #1f3e59;
+
+input,
+select,
+button {
+  margin: 0.8rem;
 }
-#status {
-  border: 1px solid #1f3e59;
-  outline: none;
-  padding: 5px;
-  margin-top: 10px;
-}
-::placeholder {
-  color: #1f3e59;
-}
+
 form button {
+  height: 2rem;
   background-color: #1f3e59;
   border-radius: 5px;
   color: #f7f1f0;
 }
+
+::placeholder {
+  color: #1f3e59;
+}
+
 .detail-one {
   display: flex;
   justify-content: center;
